--- a/spring-test/pom.xml
+++ b/spring-test/pom.xml
@@ -87,7 +87,8 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>4.2.6.Final</version>
+      <!--version>4.2.6.Final</version-->
+      <version>[5.4.24.Final,)</version>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
@@ -103,7 +104,8 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
+      <!--version>1.2.17</version-->
+      <version>2.16.0</version>
     </dependency>
   </dependencies>
 </project>
